project/stage/parse_tests/tests/reject/bad_statements/bad_assignments/scalar_types/before_var_decl.ul
void main() {
    id = 1;
    int id;
}
